fixed issue causing time-blocks to overlap each other. Also updated time colors and added a new feaature so the user receives feedback above each saved task, letting them know that the task was saved to local storage. The feedback is then removed after 2 seconds.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,8 +36,10 @@ textarea {
 
 .row {
   /* white-space: pre-wrap; */
-  height: 80px;
+  height: 180px;
   border-top: 1px solid white;
+  margin-top: 1px;
+  margin-bottom: 1px;
 }
 
 .hour {
@@ -88,4 +90,14 @@ i {
   content: "";
   display: block;
   clear: both;
+}
+
+.confirmation-message {
+  text-align: center;
+  margin: 5px;
+  font-size: large;
+}
+
+.confirmation-message span {
+  color: red;
 }
